# cpc

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: deploy.yml  preview.yml  release.yml  test.yml
src/: bignumbers.rs  currency.rs  evaluator.rs  lexer.rs  lib.rs  lookup.rs  main.rs  newunits.rs  parser.rs  pow.rs  token_match.rs  units.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
web/src/: app.html
web/src/lib/: helpers.ts
web/src/routes/: +layout.svelte  +page.svelte
web/static/: site.webmanifest
