[package]
name = "cpc"
version = "1.9.3"
description = "evaluates math expressions, with support for units and conversion between units"
authors = ["Kasper Henningsen"]
edition = "2021"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/probablykasper/cpc#readme"
repository = "https://github.com/probablykasper/cpc"
documentation = "https://docs.rs/cpc"
keywords = ["math", "expression", "evaluate", "units", "convert"]
categories = [
    "mathematics",
    "science",
    "parsing",
    "text-processing",
    "value-formatting",
]

[dependencies]
bigdecimal = "0.4.8"
f256 = "0.7.0"
malachite = "0.6"
unicode-segmentation = "1.10"

[dev-dependencies]
regex = "1.7"
