[package]
name = "cpc"
version = "2.0.0"
description = "evaluates math expressions, with support for units and conversion between units"
authors = ["Kasper Henningsen"]
edition = "2024"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/probablykasper/cpc#readme"
repository = "https://github.com/probablykasper/cpc"
documentation = "https://docs.rs/cpc"
keywords = ["math", "expression", "evaluate", "units", "convert"]
categories = [
    "mathematics",
    "science",
    "parsing",
    "text-processing",
    "value-formatting",
]

[dependencies]
decimal = { version = "2.1", default-features = false, features = [
    "serde",
    "ord_subset",
] }
unicode-segmentation = "1.10"

[dev-dependencies]
regex = "1.11"

[lints.clippy]
comparison_chain = "allow"
if_same_then_else = "allow"
match_like_matches_macro = "allow"
get_first = "allow"
