[package]
name = "cpc-wasm"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cpc = { path = "../" }
decimal = { version = "2.1", default-features = false, features = [
    "serde",
    "ord_subset",
] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
